@startuml Dataset_GetDataset_Endpoint

' Endpoint: GET /datasets/{id}
' Controller: DatasetController
' Method: GetDataset

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor<<Controller>> LightBlue
    BackgroundColor<<Service>> LightGreen
    BackgroundColor<<Repository>> LightYellow
    BackgroundColor<<Entity>> LightCoral
    BackgroundColor<<DTO>> LightGray
}

class DatasetController <<Controller>> {
    + GetDataset(id: int): GetDatasetResponse
}

interface IDatasetService <<Service>> {
    + GetDataset(id: int): GetDatasetResponse
}

class DatasetService <<Service>> {
    + GetDataset(id: int): GetDatasetResponse
}

class GetDatasetResponse <<DTO>> {
    + Name: string
    + Description: string
    + ContactPoint: string
    + Keywords: List<string>
    + Distributions: List<DistributionFull>
    + SchemaId: int
}

class DistributionFull <<DTO>> {
    + DistributionId: int
    + AccessUrl: string
    + Description: string
    + Format: string
    + Availability: bool
}

interface IDatasetRepository <<Repository>> {
    + GetByParentId(parentId: int): IReadOnlyList<DataSet>
    + GetById(id: int): DataSet?
    + GetByName(name: string): DataSet?
    + Add(dataset: DataSet): void
    + SaveChanges(): void
}

class DatasetRepository <<Repository>> {
    + GetByParentId(parentId: int): IReadOnlyList<DataSet>
    + GetById(id: int): DataSet?
    + GetByName(name: string): DataSet?
    + Add(dataset: DataSet): void
    + SaveChanges(): void
}

class DataSet <<Entity>> {
    + Id: int
    + Name: string
    + Description: string?
    + ContactPoint: string?
    + SchemaId: int
    + Schema: Schema?
    + Distribution: List<Distribution>
    + Keywords: List<string>
    + ParentId: int
}

class Distribution <<Entity>> {
    + Id: int
    + AccessUrl: string?
    + Description: string?
    + IsAvailable: bool
    + Format: string?
    + DataSet: DataSet?
}

class Schema <<Entity>> {
    + Id: int
    + Name: string
    + JsonSchema: string
    + DataSets: List<DataSet>
}

' Relationships
DatasetController ..> IDatasetService : uses
DatasetController ..> GetDatasetResponse : returns
IDatasetService <|.. DatasetService : implements
DatasetService ..> IDatasetRepository : uses
DatasetService ..> GetDatasetResponse : creates
GetDatasetResponse *-- DistributionFull : contains
IDatasetRepository <|.. DatasetRepository : implements
DatasetRepository ..> DataSet : persists
DataSet "1" *-- "*" Distribution : has
DataSet "*" --> "1" Schema : references

note right of DatasetController
  **HTTP GET** /datasets/{id}
  Retrieves dataset by ID
  Status: 200 OK
end note

@enduml
